Changes in Header colors.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@ of Simple CSS Waves-->
         <!--Content before waves-->
         <div class="inner-header flex">
             <!--Just the logo.. Don't mind this-->
+            <div class="flex">
+                <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_t2s6xtcx.json" background="transparent" speed="1"  loop autoplay></lottie-player>
+                
+                <!-- <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_zknipja7.json" background="transparent"
+                    speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player> -->
+            </div>
 
+           <div>
             <h1> Hi, There</h1>
+        </div> 
+
         </div>
 
         <!--Waves Container-->
@@ -32,9 +41,9 @@ of Simple CSS Waves-->
                         d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
                 </defs>
                 <g class="parallax">
-                    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
-                    <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
-                    <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+                    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(180, 200, 255,0.5)" />
+                    <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(230,212,255,0.5)" />
+                    <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(200,80,255,0.3)" />
                     <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
                 </g>
             </svg>
@@ -45,12 +54,9 @@ of Simple CSS Waves-->
     <!--Header ends-->
 
     <!--Content starts-->
-    <div class="flex">
-        <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_zknipja7.json" background="transparent"
-            speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
-    </div>
-
     
+
+
     <div class="flex content">
         <h2>I Am Pritam Singh <span> <br> An Enthusiastic Web Developer & UI/UX Designer. </span> </h2>
     </div>
