--- a/index.html
+++ b/index.html
@@ -68,8 +68,14 @@
 
         <h1>
             Hi, There! <br>
-            I Am Pritam Singh
+            <span>
+                I Am Pritam Singh
+            </span>
         </h1>
+
+        <p>
+            Web-Developer & UI/UX Designer.
+        </p>
         
     </div>
 </main>
