--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="HeroImage">
 
-       <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_nrmuacl7.json" background="transparent" speed="1" style="width: 500px; height: 500px;" loop autoplay></lottie-player>
+       <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_nrmuacl7.json" background="transparent" speed="1" loop autoplay></lottie-player>
     </div>
 
 
